--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -82,7 +82,9 @@ The first approach represents a continuation of previous work \shortcite{nips,si
 Based on the similarity function, we propose a novel algorithm for linking events/clusters across languages. The approach is based on learning a classification model from labelled data based on several sets of features. In addition to these features, cross-lingual similarity is also used to quickly identify a small list of potential linking candidates for each cluster.
 This greatly increases the scalability of the system.
 
-The paper is organized as follows: we first provide an overview of the system as a whole (Section~\ref{sec:pipeline}), which includes a subsection that summarizes the main system requirements in Section~\ref{sec:sysreq}. We then present related work in Section~\ref{sec:related}. The related work covers work on cross-lingual document similarity as well as work on cross-lingual cluster linking. In Section~\ref{sec:crosslingual} we introduce the main problem of cross-lingual document similarity computation, which is followed by an overview of the models that we considered in Section~\ref{sec:models}. We then establish necessary notation in Section~\ref{sec:notation} and proceed with four subsections that describe the main cross-lingual similarity approaches in detail. The approach in Section~\ref{sec:kmeans} serves as a baseline, and the approaches in Section~\ref{sec:CCA} and Section~\ref{sec:LSI} serve as the basis on which we proposed a new approach presented in Section~\ref{sec:hublang}. In Section~\ref{sec:linking} we introduce the central problem of cross-lingual linking of clusters of news articles and our approach that combines the cross-lingual similarity functions with knowledge extraction based techniques. Finally, we present and interpret the experimental results in Section~\ref{sec:evaluation} and discuss conclusions and point out several promising future directions.
+The paper is organized as follows: we first provide an overview of the system as a whole (Section~\ref{sec:pipeline}), which includes a subsection that summarizes the main system requirements. We then present related work in Section~\ref{sec:related}. The related work covers work on cross-lingual document similarity as well as work on cross-lingual cluster linking. In Section~\ref{sec:crosslingual}, we introduce the problem of cross-lingual document similarity computation, followed by an overview  and description of the main cross-lingual similarity approaches we consider in detail, including a new approach based on hub languages. 
+%The approach in Section~\ref{sec:kmeans} serves as a baseline, and the approaches in Section~\ref{sec:CCA} and Section~\ref{sec:LSI} serve as the basis on which we proposed a new approach presented in Section~\ref{sec:hublang}
+ In Section~\ref{sec:linking}, we introduce the central problem of cross-lingual linking of clusters of news articles and our approach that combines the cross-lingual similarity functions with knowledge extraction based techniques. Finally, we present and interpret the experimental results in Section~\ref{sec:evaluation} and discuss conclusions and point out several promising future directions.
 
 
 \section{Pipeline}\label{sec:pipeline}
@@ -99,7 +101,7 @@ The collection of the news articles is performed using the Newsfeed service~\cit
 
 Collected articles are first semantically annotated by identifying mentions of relevant concepts -- either entities or important keywords. The disambiguation and entity linking of the concepts is done using Wikipedia as the main knowledge base. The algorithm for semantic annotation is based on~\cite{zhang2014saaacamactat}. As a part of the semantic annotation we also analyze the dateline of the article to identify the location of the described event as well as extract dates mentioned in the article using a set of regular expressions. Since articles are frequently revised we also detect if the collected article is just a revision of a previous one so that we can use this information in next phases of the pipeline. The last important processing step on the document level is to efficiently identify which articles in other available languages are most similar to this article. The methodology for this task is one of the main contributions of this paper and is explained in details in Section~\ref{sec:crosslingual}).
 
-As a next step, an online clustering algorithm is applied to the articles in order to identify groups of articles that are discussing the same event. For each new article, the clustering algorithm determines if the article should be assigned to some existing cluster or into a new cluster. The underlying assumption is that articles that are describing the same event are similar enough and will therefore be put into the same cluster. For clustering, each new article is first tokenized, stop words are removed and the remaining words are stemmed.
+As the next step, an online clustering algorithm is applied to the articles in order to identify groups of articles that are discussing the same event. For each new article, the clustering algorithm determines if the article should be assigned to some existing cluster or into a new cluster. The underlying assumption is that articles that are describing the same event are similar enough and will therefore be put into the same cluster. For clustering, each new article is first tokenized, stop words are removed and the remaining words are stemmed.
 The remaining tokens are represented in a vector-space model and normalized using TF-IDF\footnote{The IDF weights are dynamically computed for each new article over all news articles within a 10 day window.} (see Section~\ref{sec:tfidf} for the definition). Cosine similarity is used to find the most similar existing cluster, by comparing the document's vector to the centroid vector of each cluster. A user-defined threshold is used to determine if the article is not similar enough to any existing clusters (0.4 was used in our experiments).  If the highest similarity is above the threshold, the article is assigned to the corresponding cluster, otherwise a new cluster is created, initially containing only the single article. Whenever an article is assigned to a cluster, the cluster's centroid vector is also updated. Since articles about an event are commonly written only for a short period of time, we remove clusters once the oldest article in the cluster becomes more than 4 days old. This housekeeping mechanism prevents the clustering from becoming slow and also ensures that articles are not assigned to obsolete clusters. Details of the clustering approach are described in~\cite{brank2014}.
 
 Once the number of articles in a cluster reaches a threshold (which is a language dependent parameter), we assume that the articles in the cluster are describing an event. At that point, a new event with a unique ID is created in Event Registry, and the cluster with the articles is assigned to it. By analyzing the articles, we extract the main information about the event, such as the event location, date, most relevant entities and keywords, etc.
@@ -124,7 +126,7 @@ To summarize, the following properties are desirable:
 \end{itemize}
 We believe that a cross-lingual similarity component that meets such requirements is very desirable in a commercial setting, where several different costs have to be taken into consideration.
 
-\section{Related work}
+\section{Related work}\label{sec:related}
 
 In this section, we describe previous work described  in the literature. Since there are two distinctive tasks that we tackle in this paper (computing cross-lingual document similarity and cross-lingual cluster linking), we have separated the related work into two corresponding parts.
 
